Modified JDGR10-63_Dashboard_see-current-exchange